feat: redesign dashboard with 3-section layout and endpoint status analytics

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,6 @@
-AZURE_LOG_ANALYTICS_WORKSPACE_ID=your-workspace-id
-PORT=3001
+AZURE_SUBSCRIPTION_ID="YOUR_SUBSCRIPTION_ID"
+AZURE_RESOURCE_GROUP="YOUR_RESOURCE_GROUP"
+AZURE_CLIENT_ID="YOUR_MANAGED_IDENTITY_CLIENT_ID"
+PORT=3002
 # If using Application Insights Connection String
 # APPLICATIONINSIGHTS_CONNECTION_STRING=...
