--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@azure/arm-operationalinsights": "^9.0.0",
+    "@azure/arm-resources": "^7.0.0",
     "@azure/identity": "^4.13.0",
     "@azure/monitor-query": "^1.3.3",
     "@fastify/cors": "^11.2.0",
